[package]
name = "dj-balloon-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "cookies"] }
base64 = "0.13.0"
serde = { version = "1.0.137", features = [ "derive" ] }
toml = "0.5"
serde_json = "1.0"
futures = "0.3.21"
rustyline = "9.1.2"
text_placeholder = { version = "0.4.0", features = ["struct_context"] }
regex = "1.5"
encoding_rs = "0.8.31"

[dependencies.tokio]
version = "1.10.0"
features = ["macros", "rt-multi-thread", "sync", "fs"]
