[package]
name = "dj-balloon-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "cookies"] }
base64 = "0.22.1"
serde = { version = "1.0.137", features = [ "derive" ] }
toml = "0.8.12"
serde_json = "1.0"
futures = "0.3.30"
rustyline = "14.0.0"
text_placeholder = { version = "0.5.0", features = ["struct_context"] }
regex = "1.5"
encoding_rs = "0.8.34"

[dependencies.tokio]
version = "1.10.0"
features = ["macros", "rt-multi-thread", "sync", "fs"]
